# Rearranging_Pixel

./: .gitignore  CMakeLists.txt  README.md
reading/: pixel.cpp
test/: color.cpp  evaluator.cpp  filter.cpp  firstOpenGlApp  info.txt  interpolater.cpp  sampler.cpp  test_1.cpp
